# img2table

./: .gitignore  Makefile  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
deploy/: .env.cf-prod  .env.demo-es  .env.demo-usa  .env.dev  .env.pomares  .env.us-prod
src/img2table/: __init__.py
src/img2table/document/base/: __init__.py
src/img2table/ocr/: google_vision.py
src/img2table/tables/objects/: extraction.py
