[metadata]
name = img2table
author = Xavier Canton
summary = img2table is a table identification and extraction Python Library for PDF and images, based on OpenCV image processing
license = MIT
description_file = README.md
description_content_type = text/markdown
home_page = https://github.com/xavctn/img2table
python_requires = >=3.8, <3.12
classifiers=
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src/
packages = img2table

[bumpversion]
current_version =0.0.4
commit = True
tag = True

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
[tool:pytest]
collect_ignore = ['setup.py']

[extras]
gcp =
    google-cloud-vision
easyocr =
    easyocr>=1.7.0
    pillow>=10.0.1
